Refactor: Implement v2.0 dynamic plugin architecture and IMiningAlgorithm interface